# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.143 2005/01/11 14:10:18 wolf31o2 Exp $

  11 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1.sh,
  targets/netboot/netboot-packages.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2-chroot.sh, targets/stage3/stage3-chroot.sh:
  Added a -F or --fetchonly command line option and closing out bug #77480.
  Also added a portage version check to livecd-stage1 to close out bug #68307.

  11 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh,
  targets/stage3/stage3-chroot.sh:
  Fixed DHCP for eth0->eth3 in livecdfs-update.sh and also changed stage3
  target to use emerge -e when building. This is only temporary until the
  bootstrap.sh script can be fixed or another solution can be decided upon.

  09 Jan 2005; John Davis <zhen@gentoo.org> targets/embedded/embedded.sh,
  +targets/embedded/kmerge.sh:
  partial fix for #76542, waiting for the necessary patch to modules/embedded.py
  from mutex@gentoo.org

  09 Jan 2005; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  modules/livecd_stage2_target.py:
  fix for bug #76146

  05 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh, targets/stage1/stage1.sh:
  Updated livecdfs-update.sh to modify inittab to use bashlogin. Updated
  targets/stage1/stage1.sh to no longer clean /var/db/pkg, which should fix
  the brokenness of a stage1 tarball.

  04 Jan 2005; John Davis <zhen@gentoo.org> catalyst:
  patch for pvdabeel@gentoo.org. -f and -C can now be used together on the
  cmdline

  04 Jan 2005; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,