@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/Attic/netboot-kernel.sh,v 1.4 2004/10/22 04:23:16 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/netboot/Attic/netboot-kernel.sh,v 1.5 2005/01/11 15:22:41 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -15,10 +15,18 @@ export USE_ORDER="env:conf:defaults"
 
 mkdir -p ${GK_BINARIES}
 BUILD_KERNEL=1
+CONFIG_MD5_EQUAL=0
 
-if [ -n "${clst_KERNCACHE}" ]
+GK_PKGDIR="$(portageq envvar PKGDIR)/All/genkernel"
+
+if [ -e "${GK_PKGDIR}/config-md5" -a "`md5sum ${CONFIG}`" = "$(< ${GK_PKGDIR}/config-md5)" ]
 then
-	GK_PKGDIR="$(portageq envvar PKGDIR)/All/genkernel"
+	CONFIG_MD5_EQUAL=1
+	echo "Using the cached kernel since your .config didn't changed."
+fi
+
+if [ -n "${clst_KERNCACHE}" -a ${CONFIG_MD5_EQUAL} -eq 1 ] 
+then
 	mkdir -p ${GK_PKGDIR}
 	if [ -f ${GK_PKGDIR}/kernel ] && [ -d ${GK_PKGDIR}/lib ]
 	then
@@ -32,9 +40,6 @@ if [ ${BUILD_KERNEL} -eq 1 ]
 then
 	# setup genkernel
 	emerge ${clst_myemergeopts} genkernel || exit 1
-	# Fix dumb genkernel bug (#64514)
-	sed -e "/BUILD_INITRD/{s/&&/& (/
-	s/$/ )/ }" -i /usr/share/genkernel/gen_package.sh
 
 	# Build the kernel !
 	emerge ${clst_myemergeopts} ${SOURCES} || exit 1
@@ -47,10 +52,9 @@ then
 		--minkernpackage=${GK_BINARIES}/kernel.tar.bz2 \
 		kernel || exit 1
 
-	find ${GK_BINARIES}/lib \
-		-name '*.o' -o -name '*.ko' \
-		-exec strip -R .comment -R .note {} \; \
-		|| exit 1 
+	# DO NOT STRIP MODULES !!! It makes them unloadable !
+
+
 	kernname="$(tar -tjf ${GK_BINARIES}/kernel.tar.bz2)"
 	tar -jxf ${GK_BINARIES}/kernel.tar.bz2 -C ${GK_BINARIES}
 	mv ${GK_BINARIES}/{${kernname},kernel} || exit 1 
@@ -65,6 +69,8 @@ then
 				;;
 		esac
 	fi
+
+	md5sum "${CONFIG}" > "${GK_PKGDIR}/config-md5"
 fi
 
 cp ${GK_BINARIES}/kernel / || exit 1
